# python-descript-ion

./: .gitignore  .travis.yml  DESCRIPTION  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
docs/: conf.py  index.rst
src/descript/: __init__.py  ion.py
test/: test_descript_ion_unit.py
