[tool.poetry]
name = "descript"
version = "0.1.0"
description = "Simple library for `descript.ion` files manipulation."
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/histrio/python-descript-ion"
keywords = ["descript.ion", "filesystem", "metadata"]

classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^2.7 | ^3.8 | ^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
