[tool.poetry]
name = "descript"
version = "0.1.1"
description = "Simple library for `descript.ion` files manipulation."
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/histrio/python-descript-ion"
keywords = ["descript.ion", "filesystem", "metadata"]

classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^2.7 | ^3.8 | ^3.7 | ^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
