[tool.poetry]
name = "descript"
version = "0.1.1"
description = "Simple library for `descript.ion` files manipulation."
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/histrio/python-descript-ion"
keywords = ["descript.ion", "filesystem", "metadata"]

classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^2.7 | ^3.9 | ^3.10 | ^3.8 | ^3.7 | ^3.6"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "^4.6", python = "~2.7"},
    {version = "^7.0", python = ">=3.5"}
]
pytest-cov = "*"
more-itertools = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
